--- a/react_frontend/src/styles/App.css
+++ b/react_frontend/src/styles/App.css
@@ -67,3 +67,42 @@ body, h1, h2, h3, p, ul, li, form, input, button {
     padding: 20px;
   }
   
+  form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f3f4f6;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  }
+  
+  form label {
+    display: block;
+    margin-bottom: 10px;
+    color: #0a9396;
+  }
+  
+  form label input {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #4a4848;
+    border-radius: 4px;
+  }
+  
+  form button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    background-color: #0a9396;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  form button:hover {
+    background-color: #087f7b;
+  }
+  
